# stock_project_1

./: .gitignore  app.py  pyproject.toml  requirements.txt
stock-analysis-app/: pyproject.toml
